<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSensor">

    <Button
        android:id="@+id/button"
        android:layout_width="224dp"
        android:layout_height="90dp"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="32dp"
        android:text="@string/newSensor"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="224dp"
        android:layout_height="90dp"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="90dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sensorSpinner"
        android:layout_width="281dp"
        android:layout_height="56dp"
        android:layout_marginTop="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="276dp"
        android:layout_height="58dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:hint="@string/sensorName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensorSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>